components/redis/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-master-external
  namespace: redis
spec:
  type: ClusterIP
  ports:
    - name: redis-tls
      port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: master
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: redis-ingress
  namespace: redis
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  rules:
    - host: redis.alexbartleynees.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-master-external
                port:
                  number: 6379
  tls:
    - hosts:
        - redis.alexbartleynees.com
      secretName: redis-tls
